<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello! This screen is under construction :(</string>
    <string name="app_name">MathDroid</string>
    
	<string name="txtLblScore">Score:</string>
	<string name="txtLblLevel">Level</string>
	<string name="txtLblTime">Time</string>
	<string name="txtLblQuestion">Dummy question?</string>
	<string name="txtLblAge">Age</string>
	<string name="txtLblName">Name</string>
	<string name="txtLblNewPlayer">New player</string>
	<string name="txtLblChooseAPlayer">Choose a player</string>
	<string name="txtLblLevelSelection">Level selection</string>
	<string name="txtLblLevelPassedMessage">Yay, Level passed!</string>
	<string name="txtLblTimePlayed">Time played:</string>
	<string name="txtLblCorrect">Correct:</string>
	<string name="txtLblNeeded">Needed:</string>
	
	<string name="txtBtnAnswer">Answer</string>
	<string name="txtBtnChoosePlayer">Choose Player</string>
	<string name="txtBtnSettings">Settings</string>
	<string name="txtBtnHighScores">Highscores</string>
	<string name="txtBtnStart">Start Game</string>
	<string name="txtBtnCreateNewPlayer">Create new player</string>
	<string name="txtBtnNextLevel">Next level</string>
	
	<string name="txtLogo">MathDroid Logo</string>
	
		<!-- HighScore Template Dummy Values  -->
	<string name="tmplHighScorePlayerName">PlayerName</string>
	<string name="tmplHighScoreDateTime">08/06/2012 21:35</string>
	<string name="tmplHighScoreLevel">999</string>
	<string name="tmplHighScoreScore">0123456789</string>
	
	<string name="main_no_scores">No HighScores to display</string>
	
	
</resources>