<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/PlayerName"
             android:layout_weight=".65"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tmplHighScorePlayerName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/Level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmplHighScoreLevel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/DateTime"
             android:layout_weight=".65"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tmplHighScoreDateTime"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmplHighScoreScore"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>