<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblLevel"
            android:layout_width="100dp"
            android:layout_weight=".30"
            android:layout_height="wrap_content"
            android:text="@string/txtLblLevel"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lblTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight=".70"
            android:text="@string/txtLblTime"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lblScore"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:text="@string/txtLblScore"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>


    <TextView
        android:id="@+id/lblQuestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="15dip"
        android:text="@string/txtLblQuestion"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnAnswer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnAnswer" />

    <GridView
        android:id="@+id/gridAnswers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numColumns="3" >
    </GridView>
    
</LinearLayout>